Updates to HTML comands

--- a/Project/index.html
+++ b/Project/index.html
@@ -6,5 +6,13 @@
 <link href='Project\style.css' rel='stylesheet' type='text/css' />
  </head>
    <body>
+
+<nav id='menunavinit'>
+ <ul>
+  <li>Item</li>
+  <li>Item</li>
+  <li>Item</li>
+ </ul>
+</nav>
       </body>
         </html>
