system html and html ok

--- a/Project/index.html
+++ b/Project/index.html
@@ -3,7 +3,7 @@
 <head>  <title>index</title>
 <meta charset='UTF-8'>
 <meta name='viewport'content='width=device-width, initial-scale=1.0'>
-<link href='Project\style.css' rel='stylesheet' type='text/css' />
+<link href='Style.css' rel='stylesheet' type='text/css' />
  </head>
    <body>
 
@@ -14,5 +14,17 @@
   <li>Item</li>
  </ul>
 </nav>
-      </body>
+
+<form action='form'>
+   <label>Label</label>
+  <input id='gat' type='text' name='name'>
+  <input type='submit' value='save'>
+</form>
+ 
+<form action='form'>
+   <label>Label</label>
+  <input id='gat' type='text' name='name'>
+  <input type='submit' value='save'>
+</form>     
+ </body>
         </html>
