--- a/Example/index.html
+++ b/Example/index.html
@@ -3,8 +3,24 @@
 <head>  <title>index</title>
 <meta charset='UTF-8'>
 <meta name='viewport'content='width=device-width, initial-scale=1.0'>
-<link>     
+<link href='style.css' rel='stylesheet' type='text/css' />
  </head>
+
+<nav id='menu'>
+ <ul>
+  <li>Item</li>
+  <li>Item</li>
+  <li>Item</li>
+ </ul>
+</nav>
+
+<nav id='menu'>
+ <ul>
+  <li>Item</li>
+  <li>Item</li>
+  <li>Item</li>
+ </ul>
+</nav>
    <body>
       </body>
         </html>
