New modules and update Py.html

--- a/Example/index.html
+++ b/Example/index.html
@@ -2,29 +2,11 @@
 <html>
 <head>  <title>index</title>
 <meta charset='UTF-8'>
-<meta name='viewport'content='width=device-width, initial-scale=1.0'>
 <link href='style.css' rel='stylesheet' type='text/css' />
- </head>
-
-<nav id='menu'>
- <ul>
-  <li>Item</li>
-  <li>Item</li>
-  <li>Item</li>
- </ul>
-</nav>
-
-
-<div id=div0>Hello world</div>
-
-<div id=#div0>Hello world</div>
-<nav id='menu'>
- <ul>
-  <li>Item</li>
-  <li>Item</li>
-  <li>Item</li>
- </ul>
-</nav>
+  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
+<meta name='Viewport' content='width=device-width, initial-scale=0.1'>
+</head>
    <body>
+        <div class='alert alert-primary' role='alert'>Hello world</div>
       </body>
         </html>
