--- a/Example/index.html
+++ b/Example/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>  <title>index</title>
-<meta charset='UTF-8'>
+
 <link href='style.css' rel='stylesheet' type='text/css' />
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
 <meta name='Viewport' content='width=device-width, initial-scale=0.1'>
 </head>
-   <body>
-        <div class='alert alert-primary' role='alert'>Hello world</div>
-      </body>
+   <body> 
+      
+
+ <ul class='navbar navbar-expand-lg navbar-light bg-light'>
+     <li class='navbar-brand'>
+<a class='nav-link active' href='#'>Menu</a>
+</li>
+     <li class='navbar-brand'>
+<a class='nav-link active' href='#'>Menu</a>
+</li>
+ </ul>   
+
+     <div class='container'>Site criado do zero com html.py
+
+     <div class='alert alert-primary' role='alert'>Seja bem vindo ao Py.html</div>
+
+   <div class='card text-center'>
+<div class='card-header'>Empresa Formiga</div>
+  <div class='card-body'>
+   <p class='card-text'>
+As novas funções foram implementadas</p>
+  </div>
+  <div class='card-footer text-muted'>4 days ago</div>
+   </div>    </body>
         </html>
