--- a/Example/index.html
+++ b/Example/index.html
@@ -3,7 +3,8 @@
 <head>  <title>index</title>
 
 <link href='style.css' rel='stylesheet' type='text/css' />
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
+
+<link href='/Framework/cssComponents/Spa.css' rel='stylesheet' type='text/css' />
 <meta name='Viewport' content='width=device-width, initial-scale=0.1'>
 </head>
    <body> 
