Functions SPA creates

--- a/Example/index.html
+++ b/Example/index.html
@@ -1,34 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>  <title>index</title>
-
 <link href='style.css' rel='stylesheet' type='text/css' />
-
-<link href='/Framework/cssComponents/Spa.css' rel='stylesheet' type='text/css' />
+<link href='\Framework\cssComponents\Spa.css' rel='stylesheet' type='text/css' />
 <meta name='Viewport' content='width=device-width, initial-scale=0.1'>
 </head>
    <body> 
-      
 
- <ul class='navbar navbar-expand-lg navbar-light bg-light'>
-     <li class='navbar-brand'>
-<a class='nav-link active' href='#'>Menu</a>
-</li>
-     <li class='navbar-brand'>
-<a class='nav-link active' href='#'>Menu</a>
-</li>
- </ul>   
-
-     <div class='container'>Site criado do zero com html.py
-
-     <div class='alert alert-primary' role='alert'>Seja bem vindo ao Py.html</div>
-
-   <div class='card text-center'>
-<div class='card-header'>Empresa Formiga</div>
-  <div class='card-body'>
-   <p class='card-text'>
-As novas funções foram implementadas</p>
-  </div>
-  <div class='card-footer text-muted'>4 days ago</div>
-   </div>    </body>
+   </body>
         </html>
