SPA functions create

--- a/Example/index.html
+++ b/Example/index.html
@@ -7,5 +7,20 @@
 </head>
    <body> 
 
-   </body>
-        </html>
+<div id='content'>    
+<main>    
+    
+<div id='content'>    
+<main>    
+<div id='pyhtml-02' class='app'>
+     <div>O mundo foi criado</div>
+     </div>     
+    </main>
+</div>
+<div id='pyhtml' class='app default'>
+     <div>Hello world</div>
+     </div>     
+    </main>
+</div>
+</body>
+</html>
