--- a/DemoAplication/app.html
+++ b/DemoAplication/app.html
@@ -8,6 +8,22 @@
 
      <div class='container'><h1>Hello World</h1>
 
+        <nav>
+            <ul class="navUl">
+                <li><a href="#">Element</a></li>
+                <li><a href="#">Element</a></li>
+                <li><a href="#">Element</a></li>
+                <li><a href="#">Element</a></li>
+            </ul>
+        </nav>
+        
+<nav id='#'>
+ <ul>
+  <li>Item</li>
+  <li>Item</li>
+  <li>Item</li>
+ </ul>
+</nav>
 
  <ul class='navbar navbar-expand-lg navbar-light bg-light'>
      <li class='navbar-brand'>
