--- a/DemoAplication/app.html
+++ b/DemoAplication/app.html
@@ -35,7 +35,12 @@
  </ul>      <div class='alert alert-primary' role='alert'>Create new app With Py.html
 </div>
 
-   <div class='card text-center'>
+
+<article class="articleCl">
+    <h1>Article</h1>
+    <span></span>
+    <h3>Article content</h3>
+    </article>   <div class='card text-center'>
 <div class='card-header'>Loren its App</div>
   <div class='card-body'>
    <p class='card-text'>
