Create class and insert element for mbile with Metalize

--- a/DemoAplication/app.html
+++ b/DemoAplication/app.html
@@ -1,53 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>  <title>New App</title>
+<head>  <title>App Py.html</title>
+
+ <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css'> 
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'></script>
 <meta charset='UTF-8'>
 <meta name='viewport'content='width=device-width, initial-scale=1.0'>
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
 <link>     
+ </head>
+   <body>
 
-     <div class='container'><h1>Hello World</h1>
-
-        <nav>
-            <ul class="navUl">
-                <li><a href="#">Element</a></li>
-                <li><a href="#">Element</a></li>
-                <li><a href="#">Element</a></li>
-                <li><a href="#">Element</a></li>
-            </ul>
-        </nav>
-        
-<nav id='#'>
- <ul>
-  <li>Item</li>
-  <li>Item</li>
-  <li>Item</li>
- </ul>
-</nav>
-
- <ul class='navbar navbar-expand-lg navbar-light bg-light'>
-     <li class='navbar-brand'>
-<a class='nav-link active' href='#'>Menu</a>
-</li>
-     <li class='navbar-brand'>
-<a class='nav-link active' href='#'>Menu</a>
-</li>
- </ul>      <div class='alert alert-primary' role='alert'>Create new app With Py.html
-</div>
-
-
-<article class="articleCl">
-    <h1>Article</h1>
-    <span></span>
-    <h3>Article content</h3>
-    </article>   <div class='card text-center'>
-<div class='card-header'>Loren its App</div>
-  <div class='card-body'>
-   <p class='card-text'>
-
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</p>
-  </div>
-  <div class='card-footer text-muted'>Ago add in 3 years ago</div>
-   </div>      <body>
-      </body>
+<ul class='collection with-header'>
+ <li class='collection-header'><h4>Hello Py.html</h4></li>
+ <li class='collection-item'><div>Element one<a href='#' class='secondary-content'><i class='material-icons'>send</i></a></div></li>
+</ul>     
+ </body>
         </html>
