Update new elements

--- a/DemoAplication/app.html
+++ b/DemoAplication/app.html
@@ -14,5 +14,9 @@
  <li class='collection-header'><h4>Hello Py.html</h4></li>
  <li class='collection-item'><div>Element one<a href='#' class='secondary-content'><i class='material-icons'>send</i></a></div></li>
 </ul>     
- </body>
+
+<div class='collection'>
+<a href='#!' class='collection-item'>Element one</a>
+</div>
+  </body>
         </html>
