--- a/Project/about.html
+++ b/Project/about.html
@@ -3,7 +3,8 @@
 <head>  <title>about</title>
 <meta charset='UTF-8'>
 <meta name='viewport'content='width=device-width, initial-scale=1.0'>
-<link href='Project\style.css' rel='stylesheet' type='text/css' />
+<link href='Project\style.css' rel='stylesheet' type='text/css' />  
+ <div></div>
  </head>
    <body>
       </body>
