updqate comp user

--- a/app.html
+++ b/app.html
@@ -1,15 +1,18 @@
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="Framework\Components\css\slider.css"/>
+	</head>
 	<body>
 		
 
 	<div id="slider" slider-py>
-		<p><img src="images/slide1.jpg"/></p>
-		<p><img src="images/slide2.jpg"/></p>
-		<p><img src="images/slide3.jpg"/></p>
+		<p><img src="Framework\Components\images\slide1.jpg"/></p>
+		<p><img src="Framework\Components\images\slide2.jpg"/></p>
+		<p><img src="Framework\Components\images\slide3.jpg"/></p>
 	</div>
 	
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script type="text/javascript" src="js/slider.js"></script>
-	<script> onload="startSlide()";</script>	</body>
+	<script type="text/javascript" src="Framework\Components\js\slider.js"></script>
+	<script> startSlide();</script>
+	</body>
 </html>
