add functions js

--- a/app.html
+++ b/app.html
@@ -1,18 +1,15 @@
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="Framework\Components\css\slider.css"/>
-	</head>
-	<body>
-		
-
-	<div id="slider" slider-py>
-		<p><img src="Framework\Components\images\slide1.jpg"/></p>
-		<p><img src="Framework\Components\images\slide2.jpg"/></p>
-		<p><img src="Framework\Components\images\slide3.jpg"/></p>
-	</div>
-	
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script type="text/javascript" src="Framework\Components\js\slider.js"></script>
-	<script> startSlide();</script>
-	</body>
-</html>
+    <head>
+        <title>Py.html Sandbox</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
+        <link rel="stylesheet" href="Framework\cssComponents\templates.css">
+        </head>
+    <body>
+        <div class="container-fluid sandbox">
+            <h1>Hello Py.html</h1>
+            <h3>Welcome to interactive page creation</h3>
+        </div>
+        <body>
+    </html>
