--- a/app.html
+++ b/app.html
@@ -9,12 +9,13 @@
     <body>
         <div class="container-fluid sandbox">
             <h1 id="titulo">Hello Py.html</h1>
-            <h3>Welcome to interactive page creation</h3>
+            <h3 id="subtitulo">Welcome to interactive page creation</h3>
 		</div>
 		<script src="Framework\Dynamic_\js\Physical.js"></script>
 		<script>
-			var documentX= document.getElementById("titulo");
-			var ps=new Physical()
+            var documentX= document.getElementById("titulo");
+            myMove("titulo");
+            myMove("subtitulo");
 		</script>
         <body>
     </html>
