--- a/app.html
+++ b/app.html
@@ -10,12 +10,15 @@
         <div class="container-fluid sandbox">
             <h1 id="titulo">Hello Py.html</h1>
             <h3 id="subtitulo">Welcome to interactive page creation</h3>
+            <div id="box-animate"></div>
 		</div>
 		<script src="Framework\Dynamic_\js\Physical.js"></script>
 		<script>
             var documentX= document.getElementById("titulo");
-            myMove("titulo");
-            myMove("subtitulo");
+            detectColider("titulo","box-animate");
+            gravity("titulo");
+            gravity("subtitulo");
+
 		</script>
         <body>
     </html>
