move elements via Keyboard

--- a/app.html
+++ b/app.html
@@ -38,8 +38,10 @@
             
 		</div>
 		<script src="Framework\Dynamic_\js\Physical.js"></script>
-        <script src="Framework\Dynamic_\js\Effects.js"></script>
+    <script src="Framework\Dynamic_\js\Effects.js"></script>
+    <script src="Framework\Dynamic_\js\Controller.js"></script>
 		<script>
+            selectTarget("box-animate",3);
             function menuopen(){
               fadeObj("menu");
             }
