--- a/app.html
+++ b/app.html
@@ -35,13 +35,14 @@
             <h3 id="subtitulo">Welcome to interactive page creation</h3>
             <div id="box-colider"></div>
             <div id="box-animate"></div>
+            <div id="square"></div>
             
 		</div>
 		<script src="Framework\Dynamic_\js\Physical.js"></script>
     <script src="Framework\Dynamic_\js\Effects.js"></script>
     <script src="Framework\Dynamic_\js\Controller.js"></script>
 		<script>
-            selectTarget("box-animate",3,200,200);
+            selectTarget("square",3,20,20);
             function menuopen(){
               fadeObj("menu");
             }
