add animation functions

--- a/app.html
+++ b/app.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
         <link rel="stylesheet" href="Framework\cssComponents\templates.css">
+        <link rel="stylesheet" href="Framework\cssComponents\animation.css">
         </head>
     <body>
 
@@ -42,6 +43,7 @@
     <script src="Framework\Dynamic_\js\Effects.js"></script>
     <script src="Framework\Dynamic_\js\Controller.js"></script>
 		<script>
+            animationColorRed("square");
             selectTarget("square",3,20,20);
             function menuopen(){
               fadeObj("menu");
