--- a/app.html
+++ b/app.html
@@ -43,6 +43,7 @@
     <script src="Framework\Dynamic_\js\Effects.js"></script>
     <script src="Framework\Dynamic_\js\Controller.js"></script>
 		<script>
+            opacityRepeat()
             animationColorRed("square");
             selectTarget("square",3,20,20);
             function menuopen(){
