Create all functions of PyHtml for console

--- a/index.html
+++ b/index.html
@@ -5,4 +5,16 @@
     <h2>Framework to creation for web app with front and back end</h2>
   </body>
   
+
+<nav id='menu'>
+ <ul>
+  <li>Item</li>
+  <li>Item</li>
+  <li>Item</li>
+ </ul>
+</nav>
+
+<nav id=nav>Nav here</nav>
+
+<div id=boxlight>Box light here</div>
 </html>
