--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html> 
-  <head></head>
+  <head>
+    
+
+<meta name='Viewport' content='width=device-width, initial-scale='1.0''>
+  </head>
   <body>
     <h1>Py.Html</h1>
     <h2>Framework to creation for web app with front and back end</h2>
