--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 <nav id='menu'>
  <ul>
   <li>Item</li>
+
+<nav id='sub'>
+
+<form action='cadastrar'>
+   <label>Label</label>
+  <input id='cadastr' type='text' name='name'>
+  <input type='submit' value='save'>
+</form>
+ <ul>
+  <li>Item</li>
+  <li>Item</li>
+  <li>Item</li>
+ </ul>
+</nav>
   <li>Item</li>
   <li>Item</li>
  </ul>
